test: stabilize test execution
Closes: MSEARCH-991