@@ -6,18 +6,19 @@ import static org.awaitility.Durations.FIVE_SECONDS;
 import static org.awaitility.Durations.ONE_HUNDRED_MILLISECONDS;
 import static org.awaitility.Durations.ONE_MINUTE;
 import static org.folio.search.model.types.ResourceType.BOUND_WITH;
-import static org.folio.search.utils.KafkaConstants.AUTHORITY_LISTENER_ID;
 import static org.folio.search.utils.KafkaConstants.EVENT_LISTENER_ID;
 import static org.folio.search.utils.SearchResponseHelper.getSuccessIndexOperationResponse;
-import static org.folio.search.utils.TestConstants.TENANT_ID;
-import static org.folio.search.utils.TestConstants.inventoryAuthorityTopic;
-import static org.folio.search.utils.TestConstants.inventoryBoundWithTopic;
-import static org.folio.search.utils.TestConstants.inventoryInstanceTopic;
-import static org.folio.search.utils.TestUtils.mapOf;
-import static org.folio.search.utils.TestUtils.randomId;
-import static org.folio.search.utils.TestUtils.resourceEvent;
-import static org.folio.search.utils.TestUtils.setEnvProperty;
 import static org.folio.spring.integration.XOkapiHeaders.TENANT;
+import static org.folio.support.TestConstants.TENANT_ID;
+import static org.folio.support.TestConstants.inventoryAuthorityTopic;
+import static org.folio.support.TestConstants.inventoryBoundWithTopic;
+import static org.folio.support.TestConstants.inventoryInstanceTopic;
+import static org.folio.support.utils.KafkaTestUtils.sendMessage;
+import static org.folio.support.utils.TestUtils.mapOf;
+import static org.folio.support.utils.TestUtils.randomId;
+import static org.folio.support.utils.TestUtils.removeEnvProperty;
+import static org.folio.support.utils.TestUtils.resourceEvent;
+import static org.folio.support.utils.TestUtils.setEnvProperty;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.Mockito.lenient;
@@ -30,13 +31,13 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.Callable;
-import java.util.function.Function;
 import lombok.extern.log4j.Log4j2;
+import org.apache.kafka.clients.producer.KafkaProducer;
+import org.apache.kafka.clients.producer.ProducerConfig;
+import org.apache.kafka.common.serialization.StringSerializer;
 import org.folio.search.configuration.RetryTemplateConfiguration;
 import org.folio.search.configuration.kafka.InstanceResourceEventKafkaConfiguration;
 import org.folio.search.configuration.kafka.ResourceEventKafkaConfiguration;
-import org.folio.search.configuration.properties.ReindexConfigurationProperties;
-import org.folio.search.configuration.properties.StreamIdsProperties;
 import org.folio.search.domain.dto.ResourceEvent;
 import org.folio.search.exception.SearchOperationException;
 import org.folio.search.integration.KafkaMessageListenerIT.KafkaListenerTestConfiguration;
@@ -46,57 +47,51 @@ import org.folio.search.integration.message.interceptor.ResourceEventBatchInterc
 import org.folio.search.model.types.ResourceType;
 import org.folio.search.service.ResourceService;
 import org.folio.search.service.config.ConfigSynchronizationService;
-import org.folio.search.service.metadata.LocalFileProvider;
-import org.folio.search.utils.JsonConverter;
 import org.folio.spring.DefaultFolioExecutionContext;
 import org.folio.spring.FolioExecutionContext;
 import org.folio.spring.service.SystemUserScopedExecutionService;
-import org.folio.spring.testing.extension.EnableKafka;
 import org.folio.spring.testing.type.IntegrationTest;
 import org.folio.spring.tools.kafka.FolioKafkaProperties;
-import org.folio.spring.tools.kafka.KafkaAdminService;
 import org.hibernate.exception.SQLGrammarException;
+import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
 import org.springframework.boot.autoconfigure.kafka.KafkaAutoConfiguration;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.context.TestConfiguration;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Import;
 import org.springframework.kafka.config.KafkaListenerEndpointRegistry;
-import org.springframework.kafka.core.KafkaTemplate;
-import org.springframework.kafka.listener.MessageListenerContainer;
+import org.springframework.kafka.test.EmbeddedKafkaBroker;
+import org.springframework.kafka.test.context.EmbeddedKafka;
+import org.springframework.kafka.test.utils.KafkaTestUtils;
 import org.springframework.retry.annotation.EnableRetry;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
 @Log4j2
-@EnableKafka
+@EmbeddedKafka(topics = {
+  "kafka-listener-it.test_tenant.inventory.instance",
+  "kafka-listener-it.test_tenant.inventory.bound-with",
+  "kafka-listener-it.test_tenant.authorities.authority"
+})
 @IntegrationTest
 @Import(KafkaListenerTestConfiguration.class)
 @SpringBootTest(
-  classes = {KafkaMessageListener.class, FolioKafkaProperties.class, StreamIdsProperties.class,
-             ReindexConfigurationProperties.class},
+  classes = {KafkaMessageListener.class, FolioKafkaProperties.class},
   properties = {
     "ENV=kafka-listener-it",
-    "folio.environment=${ENV:folio}",
-    "folio.kafka.retry-interval-ms=10",
+    "folio.environment=${ENV:kafka-listener-it}",
+    "folio.kafka.retry-interval-ms=100",
     "folio.kafka.retry-delivery-attempts=3",
-    "folio.kafka.listener.events.concurrency=1",
-    "folio.kafka.listener.events.group-id=${folio.environment}-test-group",
-    "folio.kafka.listener.authorities.group-id=${folio.environment}-authority-test-group",
-    "logging.level.org.apache.kafka.clients.consumer=warn"
-  })
+    "spring.kafka.consumer.auto-offset-reset=earliest"
+  }, webEnvironment = SpringBootTest.WebEnvironment.NONE)
 class KafkaMessageListenerIT {
 
   private static final String INSTANCE_ID = randomId();
   private static final String KAFKA_LISTENER_IT_ENV = "kafka-listener-it";
 
-  @Autowired
-  private KafkaTemplate<String, ResourceEvent> resourceKafkaTemplate;
   @Autowired
   private FolioKafkaProperties kafkaProperties;
   @MockitoBean
@@ -108,26 +103,40 @@ class KafkaMessageListenerIT {
 
   @Autowired
   @SuppressWarnings("SpringJavaInjectionPointsAutowiringInspection")
+  private EmbeddedKafkaBroker embeddedKafka;
+
+  @Autowired
+  @SuppressWarnings("SpringJavaInjectionPointsAutowiringInspection")
   private KafkaListenerEndpointRegistry kafkaListenerEndpointRegistry;
 
+  private KafkaProducer<String, String> kafkaProducer;
+
   @BeforeAll
-  static void beforeAll(@Autowired KafkaAdminService kafkaAdminService) {
+  static void beforeAll() {
     setEnvProperty(KAFKA_LISTENER_IT_ENV);
-    kafkaAdminService.createTopics(TENANT_ID);
-    kafkaAdminService.restartEventListeners();
+  }
+
+  @AfterAll
+  static void afterAll() {
+    removeEnvProperty();
   }
 
   @BeforeEach
   void setUp() {
     lenient().doAnswer(invocation -> invocation.<Callable<?>>getArgument(1).call())
       .when(executionService).executeSystemUserScoped(any(), any());
+
+    var configs = KafkaTestUtils.producerProps(embeddedKafka);
+    configs.put(ProducerConfig.KEY_SERIALIZER_CLASS_CONFIG, StringSerializer.class);
+    kafkaProducer = new KafkaProducer<>(configs);
   }
 
   @Test
-  @Disabled("todo: fix in scope of MSEARCH-991")
   void handleInstanceEvents_positive() {
     var expectedEvent = instanceEvent();
-    resourceKafkaTemplate.send(inventoryInstanceTopic(), INSTANCE_ID, instanceEvent());
+
+    sendMessage(INSTANCE_ID, expectedEvent, inventoryInstanceTopic(), kafkaProducer);
+
     await().atMost(ONE_MINUTE).pollInterval(ONE_HUNDRED_MILLISECONDS).untilAsserted(() ->
       verify(resourceService).indexInstancesById(List.of(expectedEvent)));
   }
@@ -136,32 +145,34 @@ class KafkaMessageListenerIT {
   void handleInstanceEvents_positive_boundWithEvent() {
     var boundWithEvent = resourceEvent(null, BOUND_WITH, mapOf("id", randomId(), "instanceId", INSTANCE_ID));
     var expectedEvent = instanceEvent().resourceName(BOUND_WITH.getName())._new(boundWithEvent.getNew());
-    resourceKafkaTemplate.send(inventoryBoundWithTopic(), INSTANCE_ID, boundWithEvent);
+
+    sendMessage(INSTANCE_ID, boundWithEvent, inventoryBoundWithTopic(), kafkaProducer);
+
     await().atMost(ONE_MINUTE).pollInterval(ONE_HUNDRED_MILLISECONDS).untilAsserted(() ->
       verify(resourceService).indexInstancesById(List.of(expectedEvent)));
   }
 
   @Test
-  void handleInstanceEvents_negative_tenantIndexNotInitialized() throws Exception {
+  void handleInstanceEvents_negative_tenantIndexNotInitialized() {
     var idEvent = instanceEvent();
 
     when(resourceService.indexInstancesById(List.of(idEvent))).thenThrow(
       new SearchOperationException("Failed to upload events"));
 
-    resourceKafkaTemplate.send(inventoryInstanceTopic(), INSTANCE_ID, instanceEvent()).get();
+    sendMessage(INSTANCE_ID, idEvent, inventoryInstanceTopic(), kafkaProducer);
 
     await().atMost(FIVE_SECONDS).pollInterval(ONE_HUNDRED_MILLISECONDS).untilAsserted(() ->
       verify(resourceService, times(3)).indexInstancesById(List.of(idEvent)));
   }
 
   @Test
-  void handleInstanceEvents_negative_tenantSchemaIsNotInitialized() throws Exception {
+  void handleInstanceEvents_negative_tenantSchemaIsNotInitialized() {
     var idEvent = instanceEvent();
 
     when(resourceService.indexInstancesById(List.of(idEvent))).thenThrow(
       new SQLGrammarException("could not extract ResultSet", new SQLException()));
 
-    resourceKafkaTemplate.send(inventoryInstanceTopic(), INSTANCE_ID, instanceEvent()).get();
+    sendMessage(INSTANCE_ID, idEvent, inventoryInstanceTopic(), kafkaProducer);
 
     await().atMost(FIVE_SECONDS).pollInterval(ONE_HUNDRED_MILLISECONDS).untilAsserted(() ->
       verify(resourceService, times(3)).indexInstancesById(List.of(idEvent)));
@@ -181,22 +192,22 @@ class KafkaMessageListenerIT {
       return getSuccessIndexOperationResponse();
     });
 
-    sendMessagesWithStoppedListenerContainer(authorityIds, AUTHORITY_LISTENER_ID, inventoryAuthorityTopic(),
-      KafkaMessageListenerIT::authorityEvent);
+    authorityIds.forEach(id -> sendMessage(INSTANCE_ID, authorityEvent(id), inventoryAuthorityTopic(), kafkaProducer));
 
     var expectedEvents = authorityIds.stream().map(KafkaMessageListenerIT::authorityEvent).toList();
     await().atMost(FIVE_SECONDS).pollInterval(ONE_HUNDRED_MILLISECONDS).untilAsserted(() -> {
-      verify(resourceService).indexResources(List.of(expectedEvents.get(0)));
+      verify(resourceService).indexResources(List.of(expectedEvents.getFirst()));
       verify(resourceService, times(3)).indexResources(List.of(expectedEvents.get(1)));
     });
   }
 
   @Test
   void shouldAddEnvPrefixForConsumerGroup() {
-    var container = getKafkaListenerContainer(EVENT_LISTENER_ID);
-    assertThat(container.getGroupId()).startsWith(KAFKA_LISTENER_IT_ENV);
-    kafkaProperties.getListener().values().forEach(
-      listenerProperties -> assertThat(listenerProperties.getGroupId()).startsWith(KAFKA_LISTENER_IT_ENV));
+    var listenerContainer = kafkaListenerEndpointRegistry.getListenerContainer(EVENT_LISTENER_ID);
+    assertThat(listenerContainer).isNotNull();
+    assertThat(listenerContainer.getGroupId()).startsWith(KAFKA_LISTENER_IT_ENV);
+    kafkaProperties.getListener().values()
+      .forEach(listenerProperties -> assertThat(listenerProperties.getGroupId()).startsWith(KAFKA_LISTENER_IT_ENV));
   }
 
   @Test
@@ -206,29 +217,8 @@ class KafkaMessageListenerIT {
         .startsWith(String.format("(%s\\.)(.*\\.)", KAFKA_LISTENER_IT_ENV)));
   }
 
-  private void sendMessagesWithStoppedListenerContainer(List<String> ids, String containerId, String topicName,
-                                                        Function<String, ResourceEvent> resourceEventFunction) {
-    var container = getKafkaListenerContainer(containerId);
-    log.info("Stopping listener container");
-    container.stop();
-    ids.forEach(id -> resourceKafkaTemplate.send(topicName, id, resourceEventFunction.apply(id)));
-    log.info("Starting listener container");
-    container.start();
-    await().atMost(FIVE_SECONDS).until(container::isRunning, Boolean.TRUE::equals);
-  }
-
-  private MessageListenerContainer getKafkaListenerContainer(String containerId) {
-    var container = kafkaListenerEndpointRegistry.getListenerContainer(containerId);
-    assertThat(container).isNotNull();
-    return container;
-  }
-
   private static ResourceEvent instanceEvent() {
-    return instanceEvent(INSTANCE_ID);
-  }
-
-  private static ResourceEvent instanceEvent(String instanceId) {
-    return resourceEvent(instanceId, ResourceType.INSTANCE, mapOf("id", instanceId));
+    return resourceEvent(INSTANCE_ID, ResourceType.INSTANCE, mapOf("id", INSTANCE_ID));
   }
 
   private static ResourceEvent authorityEvent(String id) {
@@ -240,7 +230,6 @@ class KafkaMessageListenerIT {
   @Import({
     InstanceResourceEventKafkaConfiguration.class, ResourceEventKafkaConfiguration.class,
     KafkaAutoConfiguration.class, FolioMessageBatchProcessor.class,
-    KafkaAdminService.class, LocalFileProvider.class, JsonConverter.class, JacksonAutoConfiguration.class,
     RetryTemplateConfiguration.class, ResourceEventBatchInterceptor.class
   })
   static class KafkaListenerTestConfiguration {
